examples/test/testpolicy264.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy264
  namespace: namespace79
spec:
  podSelector:
    matchLabels:
      key12: value42
      key41: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value49
          key29: value47
          key21: value16
      podSelector:
        matchLabels:
          key34: value0
